Ensured legend builder entry can shrink.
In HEX mode, entries overflowed and remove buttons didn't show.

--- a/modules/gui/frontend/src/app/home/map/legendBuilder.module.css
+++ b/modules/gui/frontend/src/app/home/map/legendBuilder.module.css
@@ -1,3 +1,6 @@
+.entry {
+    flex-shrink: 1;
+}
 
 .colorContainer {
     position: relative;
